--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@
     height: 100vh;
     width: 100%;
     position: relative;
-    background-image: url('https://source.unsplash.com/1600x900/?landscape');
+    background-image: url('https://t4.ftcdn.net/jpg/05/52/47/31/360_F_552473151_gaBefjYdGK1SNYkQtIfo3HYiXTtj900W.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
 }
 
